resources/keycloak-service/base/keycloak-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: security
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
